# monitoring_project

./: main.py  project.py  pyanalizatorcpp.sip  pyproject.toml
analizator/: Makefile  analizator.h  getifconf.cpp  main.cpp
templates/: charts.html  main.css  main_menu.html  monitoring.html
